# KyrieInfer

./: CMakeLists.txt  Kyrie.md
contrast/: qwen2_infer.py
demo/: CMakeLists.txt  chat_qwen.cpp  main_qwen.cpp
kyrie/include/base/: alloc.h  base.h  buffer.h  tick.h
kyrie/include/model/: config.h  model.h  qwen2.h
kyrie/include/op/: add.h  embedding.h  encode.h  layer.h  matmul.h  mha.h  rmsnorm.h  rope.h
kyrie/include/tensor/: tensor.h
kyrie/source/base/: alloc_cpu.cpp  base.cpp
kyrie/source/model/: model.cpp  qwen2.cpp
kyrie/source/op/: encode.cpp
kyrie/source/op/kernels/cpu/: add_kernel.h  emb_kernel.h  rmsnorm_kernel.cpp  rope_kernel.cpp
kyrie/source/op/kernels/cuda/: rmsnorm_kernel.cu  rope_kernel.cu
